--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= Deploy a simple todo app on OpenShift using Crunchydata to setup PostgreSQL
+= Install and use Crunchy PostgreSQL for OpenShift operator for simple todo app on OpenShift
 
 1. Install `Crunchy PostgreSQL for OpenShift operator`
 2. Install PostgreSQL Operator Monitoring
@@ -66,54 +66,10 @@ oc apply -f postgres-operator-metrics.yml
 oc apply -f https://raw.githubusercontent.com/CrunchyData/postgres-operator/v4.6.2/installers/metrics/kubectl/postgres-operator-metrics.yml
 ----
 
-.Create route for Prometheus
-[source,yaml]
-----
-oc -n pgo create route passthrough crunchy-prometheus --service=crunchy-prometheus
-----
-
-.Port forward to Prometheus
-[source,yaml]
-----
-oc -n pgo port-forward svc/crunchy-prometheus 9090:9090
-----
-
-.Create route for Grafana
-[source,yaml]
-----
-oc -n pgo create route passthrough crunchy-grafana --service=crunchy-grafana
-----
-
-.Port forward to Grafana
-[source,yaml]
-----
-oc -n pgo port-forward svc/crunchy-grafana 3000:3000
-----
-
   grafana_admin_password: "admin"
   grafana_admin_username: "admin"
 
-.Create route for Alertmanager
-[source,yaml]
-----
-oc -n pgo create route passthrough crunchy-alertmanager --service=crunchy-alertmanager
-----
-
-.Port forward to Alertmanager
-[source,yaml]
-----
-oc -n pgo port-forward svc/crunchy-alertmanager 9093:9093
-----
-
-.Create all routes in one go
-[source,yaml]
-----
-oc -n pgo create route passthrough crunchy-prometheus --service=crunchy-prometheus
-oc -n pgo create route passthrough crunchy-grafana --service=crunchy-grafana
-oc -n pgo create route passthrough crunchy-alertmanager --service=crunchy-alertmanager
-----
-
-== Instillation of the pgo client
+== Installation of the pgo client
 
 https://access.crunchydata.com/documentation/postgres-operator/latest/installation/postgres-operator/#install-the-pgo-client-hahahugoshortcode-s8-hbhb[Install the pgo Client]
 
@@ -163,29 +119,6 @@ oc -n pgo create route passthrough postgres-operator --service=postgres-operator
 oc -n pgo port-forward svc/postgres-operator 8443:8443
 ----
 
-== User & Roles
-
-It is possible to create users as `managed` and `not managed`. 
-
-- The `managed` have the username/password in `secrets` like `hippo-primaryuser-secret` 
-- The `not manage` have username/password only in PostgreSQL
-
-.Get a list of user/password for a cluster via the pgo client
-[source,bash]
-----
-pgo show user hippo \
-  --show-system-accounts
-----
-
-WARNING: `pgo show user hippo --show-system-accounts` will only show password for `managed` users.  
-
-.Create a managed for our todo applicatio
-[source,bash]
-----
-pgo create user hippo \
-  --username=micbn --password=SuperSecret1 --managed
-----
-
 == TLS for the `hippo` cluster
 
 Create ca.crt, server.crt, server.key via script
@@ -228,7 +161,14 @@ kubectl create secret tls hippo-tls-keypair \
 oc apply -f hippo-pgcluster.yaml
 ----
 
-`pgBouncer` is enabled by adding the `pgBouncer` node.
+.Create a managed for our todo application
+[source,bash]
+----
+pgo create user hippo \
+  --username=micbn --password=SuperSecret1 --managed
+----
+
+`pgBouncer` is enabled by updating the `pgBouncer` node in hippo-pgcluster.yaml.
 
 ----
 pgBouncer:
@@ -239,7 +179,7 @@ pgBouncer:
   tlsSecret: {{ item.cluster_name }}-tls-keypair
 ----
 
-Monitriong is enabled by adding `exporter: true`.
+Monitriong is enabled by adding `exporter: true` to hippo-pgcluster.yaml.
 
 .Create Pgreplica
 [source,bash]
@@ -276,6 +216,28 @@ Type "help" for help.
 hippo=>
 ----
 
+== User & Roles
+
+It is possible to create users as `managed` and `not managed`. 
+
+- The `managed` have the username/password in `secrets` like `hippo-primaryuser-secret` 
+- The `not manage` have username/password only in PostgreSQL
+
+.Get a list of user/password for a cluster via the pgo client
+[source,bash]
+----
+pgo show user hippo --show-system-accounts
+----
+
+WARNING: `pgo show user hippo --show-system-accounts` will only show password for `managed` users.  
+
+.Create a managed for our todo application
+[source,bash]
+----
+pgo create user hippo \
+  --username=micbn --password=SuperSecret1 --managed
+----
+
 === ToDo app
 
 We have a nice small app to test connection to a cluster.
@@ -284,14 +246,55 @@ link:todo-app/README.adoc[todo-app/README.adoc]
 
 == See monitroring of the cluster
 
-http://localhost:3000[Grafana]
+.Create route for Prometheus
+[source,yaml]
+----
+oc -n pgo create route passthrough crunchy-prometheus --service=crunchy-prometheus
+----
 
-http://localhost:9090[Prometheus]
+.Port forward to Prometheus
+[source,yaml]
+----
+oc -n pgo port-forward svc/crunchy-prometheus 9090:9090
+----
 
-http://localhost:9093[Alertmanager]
+.Create route for Grafana
+[source,yaml]
+----
+oc -n pgo create route passthrough crunchy-grafana --service=crunchy-grafana
+----
+
+.Port forward to Grafana
+[source,yaml]
+----
+oc -n pgo port-forward svc/crunchy-grafana 3000:3000
+----
+
+.Create route for Alertmanager
+[source,yaml]
+----
+oc -n pgo create route passthrough crunchy-alertmanager --service=crunchy-alertmanager
+----
+
+.Port forward to Alertmanager
+[source,yaml]
+----
+oc -n pgo port-forward svc/crunchy-alertmanager 9093:9093
+----
+
+.Default Service ports.
+|==========================
+|Service|Port
+
+|http://localhost:3000[Grafana]|3000
+|http://localhost:9090[Prometheus]|9090
+|http://localhost:9093[Alertmanager]|9093
+|==========================
+
+
 
 == Links
 
 - https://code-ready.github.io/crc/[Red Hat CodeReady Containers]
-- https://www.crunchydata.com/
-- https://www.crunchydata.com/developers/download-postgres/containers/postgres-operator
+- https://www.crunchydata.com/[Crunchy Data]
+- https://www.crunchydata.com/developers/download-postgres/containers/postgres-operator[Crunchy PostgreSQL Operator]
