--- a/todo-app/README.adoc
+++ b/todo-app/README.adoc
@@ -15,16 +15,21 @@ This is a very simple todo application and we it do the job.
 
 [source,bash]
 ----
-oc port-forward pod/$(oc get pods -n openshift-image-registry | awk '/^image-registry/{print $1}') \
+oc port-forward \
+    pod/$(oc get pods -n openshift-image-registry | awk '/^image-registry/{print $1}') \
     -n openshift-image-registry 5000
 ----
 
 [source,bash]
 ----
-podman login --tls-verify=false -u unused -p $(oc whoami -t) localhost:5000/openshift
+podman login \
+    --tls-verify=false -u unused -p $(oc whoami -t) localhost:5000/openshift
 
-podman build -f src/main/docker/Dockerfile.jvm -t localhost:5000/openshift/todo-app:v1 .
-podman push --tls-verify=false  localhost:5000/openshift/todo-app:v1
+podman build \
+    -f src/main/docker/Dockerfile.jvm -t localhost:5000/openshift/todo-app:v1 .
+
+podman push \
+    --tls-verify=false  localhost:5000/openshift/todo-app:v1
 ----
 
 === Deploy todo-app
